# CAMELS_Agents

./: .gitignore  CAMELS_description.tex  CAMELS_documentation.py  CAMELS_papers.py  CAMELS_section.txt  MANIFEST.in  README.md  app.py  prompts.py  requirements.txt  routers.py  setup.cfg  setup.py
.devcontainer/: devcontainer.json
CAMELS_Agents/: CAMELS_documentation.py  CAMELS_papers.py  app.py  coding.py  database.py  literature.py  llms.py  main.py  parameters.py  prompts.py  routers.py  update_db_CAMELS_papers.py  writing.py
Input_Text/: CAMELS_coding.txt  CAMELS_paper_links.py
docs/: GA.html
docs_database/: chroma.sqlite3
papers_database/papers_db/: chroma.sqlite3
src/: CAMELS_documentation.py  CAMELS_papers.py  coding.py  database.py  literature.py  llms.py  main.py  parameters.py  routers.py  update_db_CAMELS_papers.py  writing.py
