[metadata]
name = CAMELS Agents
version = 0.1.0
description = A set of AI Agents to help you work with CAMELS data
author = Francisco Villaescusa-Navarro
author_email = villaescusa.francisco@gmail.com

[options]
packages = find:
install_requires =
    streamlit
    tiktoken
    langchain
    langchain-chroma
    langchain-community
    langchain-groq
    langchain-google-vertexai
    langchain-google-genai
    langchain-openai
    langchain-anthropic
    langgraph
    langgraph-checkpoint-sqlite
    pydantic
    dotenv
    requests
    pysqlite3-binary
    typing-extensions
include_package_data = True

[options.entry_points]
console_scripts =
    your_app=app:main